--- a/index.html
+++ b/index.html
@@ -20,81 +20,85 @@
 
 </header>
 <main>
-<article class="About">
-    <h2>About</h2>
-    <p>Hello! 
-        I’m TK and I’m a photographer. I love looking at life through the lens of my camera. Landscape photography is my speciality and it’s taken me all over the world. </p>
+    <article class="About">
+        <h2>About</h2>
+        <p>Hello! 
+            I’m TK and I’m a photographer. I love looking at life through the lens of my camera. Landscape photography is my speciality and it’s taken me all over the world. </p>
 
-</article>
-<section id="Grid">
+    </article>
+    <article>
+        <h2>Gallery</h2>
+        <p>Here are some highlights of my work. The locations and year are in the caption. </p>
+    </article>
+<section id="grid">
     <figure class="Chile">
         <img src="../photoGallery/images/Chile.png">
         <figcaption>Chile, 2001</figcaption>
     </figure>
     <figure class="Guatemala">
-    <img src="../photoGallery/images/Guatemala.png">
+    <img src="../photoGallery/images/Guatemala.png" alt="">
     <figcaption>Guatemala, 1997</figcaption>
     </figure>
     <figure class="Hawaii">
-        <img src="../photoGallery/images/Hawaii.png">
+        <img src="../photoGallery/images/Hawaii.png" alt="Hawaii">
         <figcaption>Hawaii, 2010</figcaption>
     </figure>
     <figure class="Iran">
-        <img src="../photoGallery/images/Iran.png">
+        <img src="../photoGallery/images/Iran.png" alt="Iran">
         <figcaption>Iran, 1999</figcaption>
     </figure>
     <figure class="Ireland">
-        <img src="../photoGallery/images/Ireland.png">
+        <img src="../photoGallery/images/Ireland.png" alt="Ireland">
         <figcaption>Ireland, 2012</figcaption>
     </figure>
     <figure class="Italy">
-        <img src="../photoGallery/images/Italy.png">
+        <img src="../photoGallery/images/Italy.png" alt="Italy">
         <figcaption>Italy, 2015</figcaption>
     </figure>
     <figure class="moabDesert">
-        <img src="../photoGallery/images/Moab-Desert.png">
+        <img src="../photoGallery/images/Moab-Desert.png" alt="moab">
         <figcaption>Moab Desert, 2020</figcaption>
     </figure>
     <figure class="rocky">
-        <img src="../photoGallery/images/Rocky-Mountains.png">
+        <img src="../photoGallery/images/Rocky-Mountains.png" alt="rocky">
         <figcaption>Rocky Mountains, 2009</figcaption>
     </figure>
     <figure class="Switz">
-        <img src="../photoGallery/images/Switzerland.png">
+        <img src="../photoGallery/images/Switzerland.png" alt="switzerland">
         <figcaption>Switzerland, 2014</figcaption>
     </figure>
     <figure class="uk">
-        <img src="../photoGallery/images/UK.png">
+        <img src="../photoGallery/images/UK.png" alt="Uk">
         <figcaption>UK, 2005</figcaption>
     </figure>
     <figure class="usa">
-        <img src="../photoGallery/images/USA.png">
+        <img src="../photoGallery/images/USA.png" alt="USA">
         <figcaption>USA, 2021</figcaption>
     </figure>
-    <figure>
-        <img src="../photoGallery/images/Wyoming.png">
+    <figure class="wyoming">
+        <img src="../photoGallery/images/Wyoming.png" alt="Wyoming">
         <figcaption>Wyoming, 2021</figcaption>
     </figure>
 </section>
+<section class="Contact">
+    <h2>Contact</h2>
+    <p>Please fill out this form and I’ll connect with you soon.</p>
+    <form action="https://wp.zybooks.com/form-viewer.php" method="get">
+        <label for="name">name</label>
+        <input type="text" name="myName" id="myName" placeholder="Your full name" required>
+        <label for="myEmail">Email</label>
+        <input type="text" name="myEmail" id="myEmail" placeholder="Your Email Address" required>
+        <label for="message">message</label>
+        <input type="text" name="myMessage" id="myMessage" placeholder="WHAT CAN I HELP YOU WITH?" required>
+        <input type="submit">
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </form>
+</section>
 </main>
+<footer>
+    <p>Copyright 2021 TK Photography</p>
+</footer>
 
 
 
