--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <article class="About">
         <h2>About</h2>
         <p>Hello! 
-            I’m TK and I’m a photographer. I love looking at life through the lens of my camera. Landscape photography is my speciality and it’s taken me all over the world. </p>
+            I’m TK and I’m a photographer. I love looking at life through the lens of my camera. Landscape photography is my speciality and it’s taken me all over the world.
+        </p>
 
     </article>
     <article>
