--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>TK Photography</h1>
     <nav>
         <ul>
-            <li><a href="About">About</a></li>
-            <li><a href="Gallery">Gallery</a></li>
-            <li><a href="Contact">Contact</a></li>
-            <li><a href="top">top</a></li>
+            <li><a href="About">ABOUT</a></li>
+            <li><a href="Gallery">GALLERY</a></li>
+            <li><a href="Contact">CONTACT</a></li>
+            <li class="top"><a href="top">top</a></li>
         </ul>
     </nav>
 
