--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <header>
-    <h1>TK Photography</h1>
+    <h1>TK PHOTOGRAPHY</h1>
     <nav>
         <ul>
             <li><a href="About">ABOUT</a></li>
