--- a/index.html
+++ b/index.html
@@ -27,59 +27,61 @@
         </p>
 
     </article>
-    <article>
-        <h2>Gallery</h2>
-        <p>Here are some highlights of my work. The locations and year are in the caption. </p>
-    </article>
-<section id="grid">
-    <figure class="Chile">
-        <img src="../photoGallery/images/Chile.png">
-        <figcaption>Chile, 2001</figcaption>
-    </figure>
-    <figure class="Guatemala">
-    <img src="../photoGallery/images/Guatemala.png" alt="">
-    <figcaption>Guatemala, 1997</figcaption>
-    </figure>
-    <figure class="Hawaii">
-        <img src="../photoGallery/images/Hawaii.png" alt="Hawaii">
-        <figcaption>Hawaii, 2010</figcaption>
-    </figure>
-    <figure class="Iran">
-        <img src="../photoGallery/images/Iran.png" alt="Iran">
-        <figcaption>Iran, 1999</figcaption>
-    </figure>
-    <figure class="Ireland">
-        <img src="../photoGallery/images/Ireland.png" alt="Ireland">
-        <figcaption>Ireland, 2012</figcaption>
-    </figure>
-    <figure class="Italy">
-        <img src="../photoGallery/images/Italy.png" alt="Italy">
-        <figcaption>Italy, 2015</figcaption>
-    </figure>
-    <figure class="moabDesert">
-        <img src="../photoGallery/images/Moab-Desert.png" alt="moab">
-        <figcaption>Moab Desert, 2020</figcaption>
-    </figure>
-    <figure class="rocky">
-        <img src="../photoGallery/images/Rocky-Mountains.png" alt="rocky">
-        <figcaption>Rocky Mountains, 2009</figcaption>
-    </figure>
-    <figure class="Switz">
-        <img src="../photoGallery/images/Switzerland.png" alt="switzerland">
-        <figcaption>Switzerland, 2014</figcaption>
-    </figure>
-    <figure class="uk">
-        <img src="../photoGallery/images/UK.png" alt="Uk">
-        <figcaption>UK, 2005</figcaption>
-    </figure>
-    <figure class="usa">
-        <img src="../photoGallery/images/USA.png" alt="USA">
-        <figcaption>USA, 2021</figcaption>
-    </figure>
-    <figure class="wyoming">
-        <img src="../photoGallery/images/Wyoming.png" alt="Wyoming">
-        <figcaption>Wyoming, 2021</figcaption>
-    </figure>
+    
+<section>
+    <h2>Gallery</h2>
+    <p>Here are some highlights of my work. The locations and year are in the caption. </p>
+    <div id="grid">
+        <figure class="Chile">
+            <img src="../photoGallery/images/Chile.png">
+            <figcaption>Chile, 2001</figcaption>
+        </figure>
+        <figure class="Guatemala">
+        <img src="../photoGallery/images/Guatemala.png" alt="">
+        <figcaption>Guatemala, 1997</figcaption>
+        </figure>
+        <figure class="Hawaii">
+            <img src="../photoGallery/images/Hawaii.png" alt="Hawaii">
+            <figcaption>Hawaii, 2010</figcaption>
+        </figure>
+        <figure class="Iran">
+            <img src="../photoGallery/images/Iran.png" alt="Iran">
+            <figcaption>Iran, 1999</figcaption>
+        </figure>
+        <figure class="Ireland">
+            <img src="../photoGallery/images/Ireland.png" alt="Ireland">
+            <figcaption>Ireland, 2012</figcaption>
+        </figure>
+        <figure class="Italy">
+            <img src="../photoGallery/images/Italy.png" alt="Italy">
+            <figcaption>Italy, 2015</figcaption>
+        </figure>
+        <figure class="moabDesert">
+            <img src="../photoGallery/images/Moab-Desert.png" alt="moab">
+            <figcaption>Moab Desert, 2020</figcaption>
+        </figure>
+        <figure class="rocky">
+            <img src="../photoGallery/images/Rocky-Mountains.png" alt="rocky">
+            <figcaption>Rocky Mountains, 2009</figcaption>
+        </figure>
+        <figure class="Switz">
+            <img src="../photoGallery/images/Switzerland.png" alt="switzerland">
+            <figcaption>Switzerland, 2014</figcaption>
+        </figure>
+        <figure class="uk">
+            <img src="../photoGallery/images/UK.png" alt="Uk">
+            <figcaption>UK, 2005</figcaption>
+        </figure>
+        <figure class="usa">
+            <img src="../photoGallery/images/USA.png" alt="USA">
+            <figcaption>USA, 2021</figcaption>
+        </figure>
+        <figure class="wyoming">
+            <img src="../photoGallery/images/Wyoming.png" alt="Wyoming">
+            <figcaption>Wyoming, 2021</figcaption>
+        </figure>
+    </div>
+
 </section>
 <section class="Contact">
     <h2>Contact</h2>
