final updated.html
updated html

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
     <p>Please fill out this form and I’ll connect with you soon.</p>
     <form action="https://wp.zybooks.com/form-viewer.php" method="get">
         <label for="name">name</label>
-        <input type="text" name="myName" id="myName" placeholder="Your full name" required>
+        <input type="text" name="myName" id="name" placeholder="Your full name" required>
         <label for="myEmail">Email</label>
         <input type="text" name="myEmail" id="myEmail" placeholder="Your Email Address" required>
         <label for="message">message</label>
-        <input type="text" name="myMessage" id="myMessage" placeholder="WHAT CAN I HELP YOU WITH?" required>
+        <input type="text" name="myMessage" id="message" placeholder="WHAT CAN I HELP YOU WITH?" required>
         <input type="submit">
 
 
